# posixCppFdFileLibrary

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.ko.md  Readme.md  build.sh  main.cpp  run.sh
cmake/: FdFileLibConfig.cmake.in  fdfileConfig.cmake.in
docs/: README.md  api-reference.md  architecture.md  error-handling.md  fixed-records.md  getting-started.md  repository-pattern.md  variable-records.md
docs/ko/: README.md  api-reference.md  architecture.md  error-handling.md  fixed-records.md  getting-started.md  repository-pattern.md  variable-records.md
examples/: main.cpp
examples/records/: A.hpp  B.hpp  FixedA.hpp  FixedB.hpp
fdFileLib/: CMakeLists.txt  FdTextFile.cpp  FdTextFile.hpp  FileLockGuard.hpp  RecordRepository.hpp  TextRecordBase.hpp  UniqueFd.hpp  fdfile.hpp  textFormatUtil.hpp  unique_fd.hpp
fdFileLib/detail/: FileLockGuard.hpp  UniqueFd.hpp
fdFileLib/record/: FieldMeta.hpp  FixedRecordBase.hpp  Macros.hpp  RecordBase.hpp  VariableRecordBase.hpp
fdFileLib/repository/: RecordRepository.hpp  UniformFixedRepositoryImpl.hpp  VariableFileRepositoryImpl.cpp  VariableFileRepositoryImpl.hpp
fdFileLib/util/: FileLockGuard.hpp  MmapGuard.hpp  UniqueFd.hpp  textFormatUtil.hpp
include/fdfile/: fdfile.hpp
include/fdfile/record/: FieldMeta.hpp  FixedRecordBase.hpp  RecordBase.hpp  VariableRecordBase.hpp
include/fdfile/repository/: RecordRepository.hpp  UniformFixedRepositoryImpl.hpp  VariableFileRepositoryImpl.hpp
include/fdfile/util/: FileLockGuard.hpp  MmapGuard.hpp  UniqueFd.hpp  textFormatUtil.hpp
records/: A.hpp  B.hpp
src/: VariableFileRepositoryImpl.cpp
tests/: CMakeLists.txt  FixedRecordTest.cpp  UtilTest.cpp  VariableRecordTest.cpp
tests/integration/: ConcurrencyTest.cpp  FilePermissionTest.cpp
tests/scenario/: FixedRecordScenarioTest.cpp  VariableRecordScenarioTest.cpp
tests/unit/: FieldMetaTest.cpp  FileLockGuardTest.cpp  MmapGuardTest.cpp  UniqueFdTest.cpp  UtilTest.cpp
